listings/k8s-yamls/grafana-basic-os.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
  creationTimestamp: 2019-07-08T12:59:27Z
  generation: 9
  labels:
    app: grafanark
  name: grafanark
  namespace: rk-mon2
  resourceVersion: "1024946"
  selfLink: /apis/extensions/v1beta1/namespaces/rk-mon2/deployments/grafanark
  uid: 3782311a-a180-11e9-8f83-00505695861a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grafanark
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grafanark
    spec:
      containers:
      - args:
        - -config=/etc/grafana/grafana.ini
        image: nexus-registry.s7.aero:18116/grafana/grafana:5.2.1
        imagePullPolicy: IfNotPresent
        name: grafanark
        ports:
        - containerPort: 3001
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 160Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-namespace
          name: grafana-dashboard-k8s-resources-namespace
        - mountPath: /etc/grafana
          name: grafana-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: grafanark
      serviceAccountName: grafanark
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: grafana-storage
      - name: grafana-datasources
        secret:
          defaultMode: 420
          secretName: grafana-datasources
      - configMap:
          defaultMode: 420
          name: grafana-dashboards
        name: grafana-dashboards
      - configMap:
          defaultMode: 420
          name: grafana-dashboard-k8s-resources-namespace
        name: grafana-dashboard-k8s-resources-namespace
      - name: grafana-config
        secret:
          defaultMode: 420
          secretName: grafana-config
      - name: secret-grafana-tls
        secret:
          defaultMode: 420
          secretName: grafana-tls
      - name: secret-grafana-proxy
        secret:
          defaultMode: 420
          secretName: grafana-proxy
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2019-07-08T13:03:24Z
  name: grafanark
  namespace: rk-mon2
  resourceVersion: "1025393"
  selfLink: /api/v1/namespaces/rk-mon2/services/grafanark
  uid: c53d836a-a180-11e9-8f83-00505695861a
spec:
  clusterIP: 10.233.22.251
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: grafanark
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
data:
  grafana.ini: W2F1dGhdCmRpc2FibGVfbG9naW5fZm9ybSA9IGZhbHNlCmRpc2FibGVfc2lnbm91dF9tZW51ID0gZmFsc2UKW2F1dGguYmFzaWNdCmVuYWJsZWQgPSB0cnVlClthdXRoLnByb3h5XQphdXRvX3NpZ25fdXAgPSBmYWxzZQplbmFibGVkID0gZmFsc2UKaGVhZGVyX25hbWUgPSBYLUZvcndhcmRlZC1Vc2VyCltzZWN1cml0eV0KYWRtaW5fdXNlciA9IGFkbWluCmFkbWluX3Bhc3N3b3JkID0gYWRtaW4KW3BhdGhzXQpkYXRhID0gL3Zhci9saWIvZ3JhZmFuYQpsb2dzID0gL3Zhci9saWIvZ3JhZmFuYS9sb2dzCnBsdWdpbnMgPSAvdmFyL2xpYi9ncmFmYW5hL3BsdWdpbnMKcHJvdmlzaW9uaW5nID0gL2V0Yy9ncmFmYW5hL3Byb3Zpc2lvbmluZwpbc [...]
kind: Secret
metadata:
  creationTimestamp: 2019-07-08T12:59:51Z
  name: grafana-config
  namespace: rk-mon2
  resourceVersion: "1024889"
  selfLink: /api/v1/namespaces/rk-mon2/secrets/grafana-config
  uid: 45fd91aa-a180-11e9-8f83-00505695861a
type: Opaque
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: 2019-07-09T07:20:27Z
  generation: 2
  name: grafanark
  namespace: rk-mon2
  resourceVersion: "1025460"
  selfLink: /apis/extensions/v1beta1/namespaces/rk-mon2/ingresses/grafanark
  uid: 067845cd-a21a-11e9-87d3-00505695861a
spec:
  rules:
  - host: grafanark.epaas11d24.epaas.s7.aero
    http:
      paths:
      - backend:
          serviceName: grafanark
          servicePort: 3001
        path: /
  tls:
  - hosts:
    - grafanark.epaas11d24.epaas.s7.aero
    secretName: epaas11d24-tls
