listings/k8s-yamls/s3fs-minio-ds-shared.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: s3
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: s3fs
  labels:
    app: s3fs
spec:
  selector:
    matchLabels:
      app: s3fs
  template:
    metadata:
      labels:
        app: s3fs
        tier: storage
    spec:
      containers:
      - name: s3fs
        securityContext:
          privileged: true
          runAsUser: 0
        image: nexus-registry.s7.aero:18116/xueshanf/s3fs:latest
        imagePullPolicy: Always
        command: ["/usr/bin/s3fs","-o","passwd_file=/etc/.passwd-s3fs",'-f', '-d', '-o', 'allow_other', '-o', 'use_cache=/tmp', '-o', 'url=http://172.20.53.221:9000', '-o', 'endpoint=""', '-o', 'use_path_request_style', 'rwmany', '/mnt/data']
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 150Mi
        volumeMounts:
        - name: mntdatas3fs
          mountPath: /mnt/data:shared
          subPath: data
        - name: devfuse
          mountPath: /dev/fuse
        - mountPath: /etc/.passwd-s3fs
          name: s3-creds
          subPath: .s3fs
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        node-role.kubernetes.io/compute: "true"
      serviceAccount: s3
      serviceAccountName: s3
      volumes:
      - name: devfuse
        hostPath:
          path: /dev/fuse
      - name: mntdatas3fs
        hostPath:
          path: /mnt/data-s3fs
      - name: s3-creds
        secret:
          defaultMode: 0600
          secretName: s3fs-secret
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: s3-pvc
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 2Gi
  storageClassName: sas
---
apiVersion: v1
kind: Secret
metadata:
  name: s3fs-secret
type: Opaque
data:
  .s3fs: VTBPWk5NNlpGODFKWjM3QVpZV1M6UVIwOSsyWFIyVGJtb3p1S1psK1d0aDVxZWtxN2FBR0ZmZWVUTzZXawo=
